// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressIndicator With anchors renders correctly 1`] = `
<div>
  <section
    class="css-1slslyo-boxStyles-ProgressIndicatorContainer"
  >
    <button
      aria-controls="progress-indicator-:r0:-body"
      aria-expanded="false"
      class="css-1rwe9m2-BaseButton-boxStyles-ProgressIndicatorCollapseButton"
      id="progress-indicator-:r0:-button"
      type="button"
    >
      Doing step 2 of 3
      <svg
        aria-hidden="true"
        class="css-5ae1oq-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        style="transform: rotate(0deg);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8L12 17L3 8"
        />
      </svg>
    </button>
    <div
      class="css-fmb23f-ProgressIndicator"
      id="progress-indicator-:r0:-body"
      style="display: none; height: 0px; overflow: hidden;"
    >
      <ul
        class="css-14adt79-boxStyles"
      >
        <li
          class="css-td3mpi-boxStyles"
        >
          <a
            class="css-s94ve8-TextLink-boxStyles-ProgressIndicatorItem"
            href="#"
          >
            <svg
              aria-hidden="true"
              class="css-19ui18a-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                fill="currentColor"
                fill-rule="evenodd"
                stroke="none"
              />
            </svg>
            <span
              class="css-1r1fnqp-boxStyles"
            >
              <span
                class="css-1f7oqqc-boxStyles-Text"
              >
                Completed
              </span>
              Introduction
            </span>
          </a>
        </li>
        <li
          class="css-td3mpi-boxStyles"
        >
          <a
            class="css-1htfcbp-TextLink-boxStyles-ProgressIndicatorItem"
            href="#"
          >
            <svg
              aria-hidden="true"
              class="css-1pepvcz-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM6.85714 13.7143C7.61456 13.7143 8.22857 13.1003 8.22857 12.3429C8.22857 11.5854 7.61456 10.9714 6.85714 10.9714C6.09972 10.9714 5.48571 11.5854 5.48571 12.3429C5.48571 13.1003 6.09972 13.7143 6.85714 13.7143ZM13.7143 12.3429C13.7143 13.1003 13.1003 13.7143 12.3429 13.7143C11.5854 13.7143 10.9714 13.1003 10.9714 12.3429C10.9714 11.5854 11.5854 10.9714 12.3429 10.9714C13.1003 10.9714 13.7143 11.5854 13.7143 12.3429ZM17.8286 13.7143C18.586 13.7143 19.2 13.1003 19.2 12.3429C19.2 11.5854 18.586 10.9714 17.8286 10.9714C17.0712 10.9714 16.4571 11.5854 16.4571 12.3429C16.4571 13.1003 17.0712 13.7143 17.8286 13.7143Z"
                fill="currentColor"
                fill-rule="evenodd"
                stroke="none"
              />
            </svg>
            <span
              class="css-1r1fnqp-boxStyles"
            >
              <span
                class="css-1f7oqqc-boxStyles-Text"
              >
                In progress
              </span>
              Business Contacts
            </span>
          </a>
        </li>
        <li
          class="css-td3mpi-boxStyles"
        >
          <a
            class="css-s94ve8-TextLink-boxStyles-ProgressIndicatorItem"
            href="#"
          >
            <svg
              aria-hidden="true"
              class="css-1pepvcz-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10.5"
                stroke-dasharray="4 4"
                stroke-linecap="round"
              />
            </svg>
            <span
              class="css-1r1fnqp-boxStyles"
            >
              <span
                class="css-1f7oqqc-boxStyles-Text"
              >
                Not started
              </span>
              Case Studies
            </span>
          </a>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`ProgressIndicator With buttons renders correctly 1`] = `
<div>
  <section
    class="css-1slslyo-boxStyles-ProgressIndicatorContainer"
  >
    <button
      aria-controls="progress-indicator-:r2:-body"
      aria-expanded="false"
      class="css-1rwe9m2-BaseButton-boxStyles-ProgressIndicatorCollapseButton"
      id="progress-indicator-:r2:-button"
      type="button"
    >
      Doing step 2 of 3
      <svg
        aria-hidden="true"
        class="css-5ae1oq-Icon"
        clip-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        style="transform: rotate(0deg);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8L12 17L3 8"
        />
      </svg>
    </button>
    <div
      class="css-fmb23f-ProgressIndicator"
      id="progress-indicator-:r2:-body"
      style="display: none; height: 0px; overflow: hidden;"
    >
      <ul
        class="css-14adt79-boxStyles"
      >
        <li
          class="css-td3mpi-boxStyles"
        >
          <button
            class="css-6883ks-BaseButton-boxStyles-ProgressIndicatorItem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-19ui18a-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
                fill="currentColor"
                fill-rule="evenodd"
                stroke="none"
              />
            </svg>
            <span
              class="css-1r1fnqp-boxStyles"
            >
              <span
                class="css-1f7oqqc-boxStyles-Text"
              >
                Completed
              </span>
              Introduction
            </span>
          </button>
        </li>
        <li
          class="css-td3mpi-boxStyles"
        >
          <button
            class="css-wr6cvo-BaseButton-boxStyles-ProgressIndicatorItem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1pepvcz-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM6.85714 13.7143C7.61456 13.7143 8.22857 13.1003 8.22857 12.3429C8.22857 11.5854 7.61456 10.9714 6.85714 10.9714C6.09972 10.9714 5.48571 11.5854 5.48571 12.3429C5.48571 13.1003 6.09972 13.7143 6.85714 13.7143ZM13.7143 12.3429C13.7143 13.1003 13.1003 13.7143 12.3429 13.7143C11.5854 13.7143 10.9714 13.1003 10.9714 12.3429C10.9714 11.5854 11.5854 10.9714 12.3429 10.9714C13.1003 10.9714 13.7143 11.5854 13.7143 12.3429ZM17.8286 13.7143C18.586 13.7143 19.2 13.1003 19.2 12.3429C19.2 11.5854 18.586 10.9714 17.8286 10.9714C17.0712 10.9714 16.4571 11.5854 16.4571 12.3429C16.4571 13.1003 17.0712 13.7143 17.8286 13.7143Z"
                fill="currentColor"
                fill-rule="evenodd"
                stroke="none"
              />
            </svg>
            <span
              class="css-1r1fnqp-boxStyles"
            >
              <span
                class="css-1f7oqqc-boxStyles-Text"
              >
                In progress
              </span>
              Business Contacts
            </span>
          </button>
        </li>
        <li
          class="css-td3mpi-boxStyles"
        >
          <button
            class="css-6883ks-BaseButton-boxStyles-ProgressIndicatorItem"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="css-1pepvcz-Icon"
              clip-rule="evenodd"
              focusable="false"
              height="24"
              role="img"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10.5"
                stroke-dasharray="4 4"
                stroke-linecap="round"
              />
            </svg>
            <span
              class="css-1r1fnqp-boxStyles"
            >
              <span
                class="css-1f7oqqc-boxStyles-Text"
              >
                Not started
              </span>
              Case Studies
            </span>
          </button>
        </li>
      </ul>
    </div>
  </section>
</div>
`;
